  [*] Enhancement
  [-] Bug fix



------
  [!] Added new plugin for notifications about birthdays
  [+] Added ability to show a minimized window with the message when notification received
  [*] Notice of user activity in the chat duplicated on the chat tab
  [-] XML parser did not correctly handle the elements with not declared prefixes, which caused to the breaking the connection


v1.1.0
------
  [!] Added new plugin for remote controlling
  [+] Added shortcuts support
  [+] Added ability to show tabs at the bottom of the tab windows
  [+] Added support of XEP-0199 - XMPP Ping
  [+] Added maintenance history of visited conferences
  [+] Changes of contact status and entry/exit of participants in conference are stored in the history
  [+] Added support for arbitrary forms of registration when registering an account on the server
  [+] Added sticking of some windows to the edges of the screen under Windows.
  [*} Changed the format of the qoutes design
  [*] Server side archive preferences support is not longer required for retrieving messages history from server
  [*] Added ability to switch between tabs by shortkeys Alt+Number
  [*} Added ability to clear chat window
  [*] Added ability to optionaly display of status changes and entry/exit of users in conferences
  [*] Added ability to search for contacts in the roster by the group name
  [*] Added support for older versions of the message history protocol, when the time of message was stored in seconds from the beginning of the conversation
  [*] Added ability to disable the establishing of unprotected connection to the server
  [*] Added auto-adding resource to the nick in the conference if your nickname is already taken
  [-] When converting smileys into the text instead of the first key an arbitrary one was inserted
  [-] Contacts list window could be displayed outside the visible screen area
  [-] The roster window was closed by clicking on the tray even if it was inactive